fixing mobile spacing

--- a/styles.css
+++ b/styles.css
@@ -75,9 +75,10 @@ h3 {
     }
 
     h3 {
-        left:33%;
+        left:50%;
         bottom:50%;
         text-align:center;
         font-size:3em;
+        transform: translateX(-50%);
     }
 }
